# mobileAfp

./: App.js  LICENSE  README.md  app.json  package.json
android/: settings.gradle
android/app/: BUCK  build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/: index.android.bundle
android/app/src/main/cpp/: CMakeLists.txt  fingerprint.cpp
android/app/src/main/java/com/mobileafp/: MainActivity.java  MainApplication.java  RecAndFp.java  RecAndFpPackage.java
android/app/src/main/res/values/: strings.xml
ios/: Podfile  RecAndFp.m  RecAndFp.swift  fingerprint.h  fingerprint.mm  mobileAfp-Bridging-Header.h
ios/mobileAfp/: AppDelegate.m  Info.plist
ios/mobileAfp.xcodeproj/: project.pbxproj
ios/mobileAfp.xcodeproj/xcshareddata/xcschemes/: mobileAfp-tvOS.xcscheme  mobileAfp.xcscheme
ios/mobileAfp.xcworkspace/: contents.xcworkspacedata
ios/mobileAfp/Base.lproj/: LaunchScreen.xib
ios/mobileAfpTests/: mobileAfpTests.m
